- Added more UI to allow for scrolling forward/back along the alerts list.

The system has been remastered into a true API - so that any mod-author can make use of it:
- As before only requires mod-author to include a ChangeLog.txt (Now expected in /common/ for B42+, as before /media/ for B41-)
- Also supports the use of a changelog.md file if a changelog.txt file is not present, see `ChangeLog.md` for that format. (Suggestion: Omar)
- Alerts support programmable buttons by the mod's respective author.
- Well known sites are color-coded and override a provided title with a logo.
- Sites that do not start with: `https://steamcommunity.com`, `https://projectzomboid.com`, `https://theindiestone.com`, require Steam's link filter: `https://steamcommunity.com/linkfilter/?u=`.
See: `ChangeLog.txt` and `ChangeLog.md` entry: ALERT_CONFIG for an example.

Fixes: Anchored UI to handle screen size changes.
[ ------ ]

[ 1/20/25 ]
- Added support for 'Author' field in Mod.info to appear on alerts.
- Moved the 'Message from Chuck' to appear behind new alerts.
- Added another Spiffo to the art selector.
[ ------ ]

[ 1/21/25 ]
- Fix scroll-wheel not updating buttons.
- Moved button update setter.
- Set icons to scale to 32x32.
- Removed RU translation (reported as broken.)
[ ------ ]

[ 1/23/25 ]
- Removed debug print calls.
- Added button's title to tooltip if icon present.
[ ------ ]

[ 1/24/25 ]
- The alert window now scales to fit screen size.
- The alert window now anchors to one of the bottom panel buttons when possible.
[ ------ ]

[ 2/15/2025 ]
- Added RU translation. (credit: Slobodskoy)
- Added missing translations. (chuck's pz-translator.)
- Changed B41 getTexture to point to B42's textures.
[ ------ ]

[ 3/29/25 ]
- Made the default state for the Alert-System collapsed. (inspired by/dedicated to Pertominus)
[ ------ ]

[ 4/27/25 ]
- B42: No longer supports media/ position for changelogs; B42 changelogs expected only in common/.
[ ------ ]